--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,17 +7,13 @@ license = "MIT"
 name = "diffbot"
 readme = "Readme.md"
 repository = "https://github.com/diffbot/diffbot-rust-client"
-version = "0.2.0"
+version = "1.0.0"
 
 [dependencies]
-hyper = "0.7"
-mime = "0.2.0"
-rustc-serialize = "0.3"
-url = "0.5"
-
-[dependencies.clippy]
-optional = true
-version = "0.0.63"
+reqwest = "0.6.2"
+serde = "1.0.9"
+serde_json = "1.0.2"
+url = "1.5"
 
 [features]
 default = []
